--- a/hspecVariant.cabal
+++ b/hspecVariant.cabal
@@ -1,10 +1,10 @@
 name:                hspecVariant
 -- PVP summary:      +-+------- breaking API changes
 --                   | | +----- non-breaking API additions
--- | | | +--- code changes with no API change
+--                   | | | +--- code changes with no API change
 version:             0.1.0.0
 synopsis:            Spec for testing properties for variant types
--- description:    
+description:         Spec for testing properties for variant types
 homepage:            https://github.com/sanjorgek/hspecVariant
 license:             GPL-3
 license-file:        LICENSE
@@ -22,9 +22,11 @@ source-repository head
   location:            git@github.com:sanjorgek/hspecVariant.git
 
 library
-  -- exposed-modules:     
+  exposed-modules:     Test.Hspec.Variant
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.6 && <5
+                       , QuickCheckVariant ==0.1.1.0
+                       , hspec >=2.2 && <3
   hs-source-dirs:      src
   default-language:    Haskell98
