--- a/hspecVariant.cabal
+++ b/hspecVariant.cabal
@@ -2,16 +2,17 @@ name:                hspecVariant
 -- PVP summary:      +-+------- breaking API changes
 --                   | | +----- non-breaking API additions
 --                   | | | +--- code changes with no API change
-version:             0.1.0.1
+version:             1.0.0.0
 synopsis:            Spec for testing properties for variant types
-description:         Spec for testing properties for variant types
+description:         Spec for testing properties for variant types. Uses QuickCheckVariant
+                     package.
 homepage:            https://github.com/sanjorgek/hspecVariant
 license:             GPL-3
 license-file:        LICENSE
 author:              Jorge Santiago Alvarez Cuadros
 maintainer:          sanjorgek@ciencias.unam.mx
 bug-reports:         https://github.com/sanjorgek/hspecVariant/issues
-copyright:           (c) Jorge Santiago Alvarez Cuadros    
+copyright:           (c) Jorge Santiago Alvarez Cuadros
 category:            Testing
 build-type:          Simple
 extra-source-files:  README.md
@@ -23,10 +24,10 @@ source-repository head
 
 library
   exposed-modules:     Test.Hspec.Variant
-  -- other-modules:       
-  -- other-extensions:    
+  -- other-modules:
+  -- other-extensions:
   build-depends:       base >=4.6 && <5
-                       , QuickCheckVariant ==0.2.0.0
+                       , QuickCheckVariant >=1 && <2
                        , hspec >=2.2 && <3
   hs-source-dirs:      src
   default-language:    Haskell98
