--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,7 @@ ghc:
   - 7.6
   - 7.8
 install:
-  - cabal install hspec
-  - cabal install QuickCheck
+  - cabal install
 script:
-  - cabal configure --enable-tests --enable-benchmarks
+  - cabal configure
   - cabal build
-  - cabal test
