--- a/hspecVariant.cabal
+++ b/hspecVariant.cabal
@@ -2,7 +2,7 @@ name:                hspecVariant
 -- PVP summary:      +-+------- breaking API changes
 --                   | | +----- non-breaking API additions
 --                   | | | +--- code changes with no API change
-version:             1.0.0.0
+version:             1.0.1.0
 synopsis:            Spec for testing properties
 description:         Spec for testing properties for variant types. Uses QuickCheckVariant
                      package.
@@ -27,7 +27,20 @@ library
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.6 && <5
-                       , QuickCheckVariant >=1 && <2
+                       , QuickCheckVariant >=1.0.1.0 && <2
                        , hspec >=2.2 && <3
   hs-source-dirs:      src
   default-language:    Haskell98
+
+test-suite variant
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      test
+  main-is:             VariantTest.hs
+  --other-modules:
+  build-depends:       base >=4.6 && <5
+                       , QuickCheckVariant >=1.0.1.0 && <2
+                       , QuickCheck >=2.12 && <2.15
+                       , hspec >=2.2 && <3
+                       , hspecVariant
+  default-language:    Haskell2010
+
